# varios

./: CMakeLists.txt  README.md
2dpainting/: 2dpainting.pro  glwidget.cpp  glwidget.h  helper.cpp  helper.h  main.cpp  widget.cpp  widget.h  window.cpp  window.h
CapturaColor/src/: CMakeLists.txt  CapturaColor.pro  widget.cpp  widget.ui
CapturaDepth/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
CapturaMorris/src - 15052017/: ArenaView.h  Buffer.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  FIFOBuffer.h  ItemArena.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
CapturaMorris/src - Auto plataforma/: ArenaViewer.h  CMakeLists.txt  CapturaMorris.pro  Cronometro.h  KinectReader.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  ctkRangeSlider.cpp  main.cpp
CapturaMorris/src - Bioterio 1/: CMakeLists.txt  CapturaMorris.pro  KinectReader.cpp  KinectReader.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
CapturaMorris/src - Bioterio 1 +/: CapturaMorris.pro  KinectWriter.h  MainWindow.cpp  MainWindow.h  MainWindow.h.fL6532  MainWindow.h.so6532  MainWindow.ui
CapturaMorris/src - Color512x424/: MainWindow.cpp  MainWindow.h
CapturaMorris/src - CroppCorMirror/: Cronometro.h  KinectWriter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  (+1 more)
CapturaMorris/src - ROI/: CMakeLists.txt  CapturaMorris.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
CapturaMorris/src - multisource 19cpu/: CMakeLists.txt  KinectWriter.cpp  MainWindow.cpp  MainWindow.h
Excel/: Chartsheets.xlsx  Datasheets.xlsx  Numerics.xlsx  codigo.cpp
Kinect-Studio-Sample-master/: KinectStudio.sln
Kinect2Sample/sample/CoordinateMapper/src/: CMakeLists.txt  app.cpp
KinectCppSamples-master/: README.md  readss.txt
KinectPCL-master/: README.md
KinectStreamSaver/: KinectExplorer.rc  KinectWindow.cpp  KinectWindow.h  NuiColorStream.cpp  NuiColorStream.h  NuiDepthStream.cpp  NuiDepthStream.h  NuiSkeletonStream.cpp  NuiSkeletonStream.h  Readme.txt  SaverViewer.cpp  SaverViewer.h  StreamSaver.cpp  StreamSaver.h  resource.h
LiveScan3D/: LiveScan.sln
MicrosoftKinectTools2.0-master/: Kinect2ToolsPlaybackNode.cs  Kinect2ToolsRecordNode.cs  Playback (Kinect2 Tools Microsoft) help.v4p  Playback (Kinect2 Tools Microsoft) help~.xml  Record (Kinect2 Tools Microsoft) help.v4p  VVVV.Kinect2Tools.Nodes.csproj  VVVV.Kinect2Tools.Nodes.sln
OpenCV-Image-Tracking-on-Qt-master/: README.md  main.cpp  mainwindow.cpp  mainwindow.h
OpenCV/OpenCVHSV/src/: CMakeLists.txt  main.cpp
OpenCV/VideoCapturaOpen/: CMakeLists.txt
PCLOpenCVKinect/src/: CMakeLists.txt  cloudData.h  faceDetectionHaar.cpp  faceDetectionHaar.h  main.cpp  pclopencvKinect.cpp  pclopencvKinect.h  pclopencvKinect.pro  pclopencvKinect.ui
Paint-master/: Paint.pro  README.md  command.cpp  command.h  document.cpp  document.h  ellipse.cpp  fill.cpp  floodfill.cpp  floodfill.h  main.cpp  mainwindow.cpp  mainwindow.h  rectangle.cpp  scribble.cpp  shape.cpp  shape.h
PcdBench/src/: CMakeLists.txt  main.cpp
PointCloudRenderer/: CMakeLists.txt  README.md
PointCloudRenderer/include/: camera.hpp  trackball.hpp
PointCloudRenderer/include/Eigen/: Array
PointCloudRenderer/shaders/: vshader.glsl
PointCloudRenderer/src/PointCloudRenderer/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AppMain.cpp  CMakeLists.txt  CubeMesh.cpp  CubeMesh.h  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PCLMesh.cpp  PCLMesh.h  cmake_install.cmake
QSettings/: QSettings.pro  main.cpp  mainwindow.cpp  mainwindow.h
Qt-Goodies-master/: README  RangeSliderUnitConverter.h  main.cpp  qDoubleRangeSlider.cpp  qDoubleRangeSlider.h  qRangeSlider.h  settingsEditor.cpp
QtAV-master/: .qmake.conf
QtCudaOpenGL/: README.md
QtGoodies/: QtGoodies.pro  main.cpp  qRangeSlider.cpp  qRangeSlider.h
QtPCL_ICP/src/: CMakeLists.txt  cloudData.cpp  cloudData.h  main.cpp  pclKinect.cpp  pclKinect.h  pclKinect.ui  pcl_Kinect.pro
Record3DMS/src/: CMakeLists.txt  Record3DMS.pro  main.cpp
RecordAndPlaybackBasics-WPF-master/: RecordAndPlaybackBasics-WPF.csproj  RecordAndPlaybackBasics-WPF.sln
TelaSize/: TelaSize.pro  main.cpp  mainwindow.ui
TesteThreejs/: glcode.js  main.qml
Timer Stopwatch/: Timer-Stopwatch.pro  alarm.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
VideoOpenCV/: CMakeLists.txt
_FirstMorris/src/: CMakeLists.txt  FirstMorris.pro  main.cpp
_SecondMorris/: main.cpp
_ThridMorris/: Morris3.mpg  ThridMorris.pro  main.cpp
myrobotlab/: repo.json
pcd_video_player/src/: CMakeLists.txt  pcd_video_player.cpp  pcd_video_player.h
pcdio_test-master/src/: CMakeLists.txt  pcdio_test.cpp
pcl_video/src/: CMakeLists.txt  main.cpp
pcl_video/src/tawara/: attachments.cpp  attachments.h  binary_element.cpp  binary_element.h  block.cpp  block.h  block_additions.cpp  block_additions.h  block_element.h  block_group.cpp  block_group.h  block_impl.cpp  block_impl.h  cluster.cpp  cluster.h  cues.cpp  cues.h  date_element.cpp  date_element.h  ebml_element.cpp  ebml_element.h  ebml_int.cpp  ebml_int.h  el_ids.cpp  el_ids.h  element.cpp  element.h  exceptions.h  file_cluster.cpp  file_cluster.h  float_element.cpp  float_element.h  int_element.cpp  int_element.h  master_element.cpp  master_element.h  memory_cluster.cpp  memory_cluster.h  metaseek.cpp  metaseek.h  (+28 more)
reconstructme/: CMakeLists.txt
reconstructme-qt/: CMakeCache.txt  CMakeLists.txt  defines.h  resource_windows.rc
simpleKinectController/src/: CMakeLists.txt  Kinect.cpp  Kinect.h  KinectManager.cpp  KinectManager.h  README  mainwindow.cpp  mainwindow.h  simpleKinectController.pro
split-channels/: CMakeLists.txt
xlsxio-master/: CMakeLists.txt  Changelog.txt  README.md
xlsxio-master/CMake/: FindLibZip.cmake
xlsxio-master/doc/: Doxyfile
xlsxio-master/examples/: example_xlsxio_read.c  example_xlsxio_read_advanced.c  example_xlsxio_read_cpp.cpp  example_xlsxio_write_cpp.cpp
xlsxio-master/include/: xlsxio_read.h  xlsxio_version.h  xlsxio_write.h
xlsxio-master/lib/: xlsxio_read.c  xlsxio_write.c
xlsxio-master/src/: xlsxio_csv2xlsx.c  xlsxio_xlsx2csv.c
(+665 files in other folders)
